# torc

./: .buildinfo  .bumpversion.toml  .env  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  Cargo.toml  README.md  build.rs  dprint.json  genindex.html  http-routingtable.html  index.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
src/: cli.rs  (+12 more)
torc-client/: Cargo.toml
torc-client/examples/: README.md  RESOURCE_MONITORING_README.md  SLURM_STAGED_PIPELINE_README.md  WORKFLOW_ACTIONS_README.md  complex_pipeline.yaml  demo_create_from_file.sh  diamond_workflow.kdl  diamond_workflow.nu  diamond_workflow.yaml  job_commands.txt  resource_monitoring_demo.yaml  run_workflow_on_server.nu  sample_workflow.json5  simulation_sweep.yaml  slurm_staged_pipeline.yaml  workflow_actions_data_pipeline.yaml  workflow_actions_ml_training.yaml  workflow_actions_simple_slurm.yaml
torc-client/examples/python/: diamond_workflow.py
torc-client/examples/scripts/: mixed_workload.py
torc-client/src/: main.rs
torc-plot-resources/: Cargo.toml
torc-plot-resources/src/: main.rs
torc-server/: Cargo.toml  TIMING.md  TRANSACTION_POLICY.md  build.rs
torc-server/src/: logging.rs  main.rs  server.rs  service.rs
torc-tui/: Cargo.toml  DAG_IMPLEMENTATION.md  README.md
torc-tui/src/: api.rs  app.rs  main.rs  ui.rs
torc_package/: pyproject.toml  setup.py
torc_package/src/torc/: __init__.py  api.py  async_cli_command.py  common.py  job_runner.py  loggers.py  torc_rc.py  workflow_manager.py
torc_package/src/torc/apps/: management_console.py  management_console.tcss
torc_package/src/torc/cli/: collections.py  common.py  compute_nodes.py  config.py  events.py  export.py  files.py  graphs.py  hpc.py  jobs.py  reports.py  resource_requirements.py  results.py  run_function.py  run_postprocess.py  slurm.py  stats.py  torc.py  user_data.py  workflows.py
torc_package/src/torc/hpc/: hpc_manager.py  slurm_interface.py
torc_package/src/torc/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
torc_package/src/torc/utils/: files.py  filesystem_factory.py  run_command.py
torc_package/tests/: conftest.py  fake_squeue.py  slurm_cluster.py  test_api.py  test_auto_tune_workflow.py  test_examples.py  test_fake_slurm_workflow.py  test_prepare_jobs_for_submission.py  test_slurm_workflows.py  test_terminated_jobs.py  test_workflow.py
torc_package/tests/cli/: test_cancel_workflow.py  test_export.py  test_workflow_cli_commands.py
torc_package/tests/scripts/: cpu_affinity.py  create_resource.py  mapped_function.py  postprocess_gpu.py  postprocess_ud.py  preprocess.py  preprocess_ud.py  resource_consumption.py  run_jobs.py  sleep.py  use_resource.py  work.py  work_ud.py
torc_package/torc/: __init__.py  api.py  async_cli_command.py  common.py  exceptions.py  job_runner.py  loggers.py  resource_monitor_reports.py  torc_rc.py  version.py  workflow_builder.py  workflow_manager.py
torc_package/torc/apps/: management_console.py  tui.py  tui.tcss
torc_package/torc/cli/: collections.py  common.py  compute_nodes.py  config.py  events.py  export.py  files.py  graphs.py  jobs.py  reports.py  resource_requirements.py  results.py  run_function.py  run_postprocess.py  slurm.py  torc.py  tui.py  user_data.py  workflows.py
torc_package/torc/hpc/: hpc_manager.py  slurm_interface.py
torc_package/torc/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
torc_package/torc/openapi_client/api/: __init__.py  default_api.py
torc_package/torc/openapi_client/models/: __init__.py  add_jobs_response.py  add_jobs_with_edges_response.py  auto_tune_status.py  aws_scheduler_model.py  aws_schedulers_model.py  bulk_jobs_model.py  bulk_jobs_with_edges_model.py  compute_node_model.py  compute_node_resource_stats_model.py  compute_node_schedule_params.py  compute_node_stats.py  compute_node_stats_model.py  compute_nodes_model.py  compute_nodes_resources.py  default_error_response.py  edge_model.py  edges_name_model.py  file_model.py  files_model.py  get_aws_schedulers_response.py  get_compute_node_stats_response.py  get_compute_nodes_response.py  get_dot_graph_response.py  get_edges_name_response.py  get_events_response.py  get_files_produced_by_job_key_response.py  get_files_response.py  get_job_process_stats_response.py  get_job_specifications_response.py  get_jobs_find_by_needs_file_key_response.py  get_jobs_find_by_status_status_response.py  get_jobs_key_user_data_consumes_response.py  get_jobs_key_user_data_stores_response.py  get_jobs_response.py  get_local_schedulers_response.py  get_ready_job_requirements_response.py  get_resource_requirements_response.py  get_results_response.py  get_scheduled_compute_nodes_response.py  (+106 more)
torc_package/torc/resource_monitor/: models.py  resource_monitor.py  resource_stat_aggregator.py  resource_stat_collector.py
torc_package/torc/swagger_client/: __init__.py  api_client.py  configuration.py
torc_package/torc/swagger_client/api/: __init__.py  default_api.py
torc_package/torc/swagger_client/models/: __init__.py  aws_schedulers_key_model.py  compute_node_stats_key_model.py  compute_nodes_key_model.py  edges_name_model.py  files_key_model.py  inline_response200.py  inline_response2001.py  inline_response20010.py  inline_response20011.py  inline_response20012.py  inline_response20013.py  inline_response20014.py  inline_response20015.py  inline_response20016.py  inline_response20017.py  inline_response20018.py  inline_response20019.py  inline_response2001_items.py  inline_response2002.py  inline_response20020.py  inline_response20021.py  inline_response20022.py  inline_response20023.py  inline_response20024.py  inline_response20025.py  inline_response20026.py  inline_response20027.py  inline_response20028.py  inline_response20029.py  inline_response2003.py  inline_response20030.py  inline_response20031.py  inline_response20032.py  (+43 more)
torc_package/torc/tests/: database_interface.py
torc_package/torc/utils/: cpu_affinity_mask_tracker.py  files.py  filesystem_factory.py  run_command.py  sql.py
(+1754 files in other folders)
