[package]
name = "torc-plot-resources"
version = "0.7.0"
edition = "2024"
authors = ["Torc Contributors"]
description = "Tool for generating interactive HTML plots from Torc resource monitoring data"
license = "MIT OR Apache-2.0"

[[bin]]
name = "torc-plot-resources"
path = "src/main.rs"

[dependencies]
plotly = { version = "0.10", default-features = false, features = ["kaleido"] }
rusqlite = "0.32.1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
