[package]
name = "torc-tui"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
description = "Terminal UI for managing torc workflows"

[dependencies]
torc = { path = "..", features = ["client"] }
ratatui = "0.29"
crossterm = "0.28"
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
petgraph = "0.6"
